fix empty state alignment

--- a/src/app/components/workflow/connectors/connectors.css
+++ b/src/app/components/workflow/connectors/connectors.css
@@ -23,3 +23,9 @@
   padding: 5px;
   font-style: normal;
 }
+
+.flex-center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
